inserção das perguntas do quiz 1

--- a/Website/public/quizes.html
+++ b/Website/public/quizes.html
@@ -211,24 +211,88 @@
     var escolhido = ''
     var idQuiz = ''
     const listaDeQuestoes1 = [
-        {
-            pergunta: "Qual mês tem teste2?",
-            alternativaA: "Janeiro",
-            alternativaB: "Dezembro",
-            alternativaC: "Junho",
-            alternativaD: "Agosto",
-            alternativaCorreta: "alternativaC"
-        },
+    {
+        pergunta: "Onde o xadrez teve sua origem?",
+        alternativaA: "China",
+        alternativaB: "Grécia",
+        alternativaC: "Índia",
+        alternativaD: "Pérsia",
+        alternativaCorreta: "alternativaC"
+    },
+    {
+        pergunta: "Qual era o nome do jogo precursor do xadrez na Índia?",
+        alternativaA: "Shatranj",
+        alternativaB: "Chaturanga",
+        alternativaC: "Shah Māt",
+        alternativaD: "Tabuleiro Real",
+        alternativaCorreta: "alternativaB"
+    },
+    {
+        pergunta: "O que o jogo chaturanga simulava?",
+        alternativaA: "Um torneio medieval",
+        alternativaB: "Uma caçada real",
+        alternativaC: "Uma batalha militar",
+        alternativaD: "Um desfile religioso",
+        alternativaCorreta: "alternativaC"
+    },
+    {
+        pergunta: "Qual termo surgiu da expressão 'shāh māt'?",
+        alternativaA: "Xeque",
+        alternativaB: "Jaque",
+        alternativaC: "Xeque-mate",
+        alternativaD: "Xadrez",
+        alternativaCorreta: "alternativaC"
+    },
+    {
+        pergunta: "Como o xadrez chegou à Europa?",
+        alternativaA: "Pelas Cruzadas",
+        alternativaB: "Pelo Império Romano",
+        alternativaC: "Pela expansão do Império Islâmico",
+        alternativaD: "Pelo comércio com a China",
+        alternativaCorreta: "alternativaC"
+    },
+    {
+        pergunta: "Em que países o xadrez chegou primeiro na Europa?",
+        alternativaA: "França e Alemanha",
+        alternativaB: "Inglaterra e Irlanda",
+        alternativaC: "Espanha e Itália",
+        alternativaD: "Noruega e Suécia",
+        alternativaCorreta: "alternativaC"
+    },
+    {
+        pergunta: "Qual peça teve seu poder aumentado no século XV?",
+        alternativaA: "Bispo",
+        alternativaB: "Torre",
+        alternativaC: "Rei",
+        alternativaD: "Dama (Rainha)",
+        alternativaCorreta: "alternativaD"
+    },
+    {
+        pergunta: "Em que ano aconteceu o primeiro Campeonato Mundial de Xadrez?",
+        alternativaA: "1894",
+        alternativaB: "1886",
+        alternativaC: "1901",
+        alternativaD: "1851",
+        alternativaCorreta: "alternativaB"
+    },
+    {
+        pergunta: "Quem foi o primeiro campeão mundial oficial de xadrez?",
+        alternativaA: "Bobby Fischer",
+        alternativaB: "Garry Kasparov",
+        alternativaC: "Wilhelm Steinitz",
+        alternativaD: "Anatoly Karpov",
+        alternativaCorreta: "alternativaC"
+    },
+    {
+        pergunta: "Qual desses jogadores NÃO é citado como lenda do xadrez no texto?",
+        alternativaA: "Bobby Fischer",
+        alternativaB: "Magnus Carlsen",
+        alternativaC: "Anatoly Karpov",
+        alternativaD: "Garry Kasparov",
+        alternativaCorreta: "alternativaB"
+    }
+];
 
-        {
-            pergunta: "Quantas horas tem em um dia?",
-            alternativaA: "30 horas",
-            alternativaB: "38 horas",
-            alternativaC: "48 horas",
-            alternativaD: "24 horas",
-            alternativaCorreta: "alternativaD"
-        }
-    ]
 
     const listaDeQuestoes2 = [
 
