mudança no nome da kpi

--- a/Website/public/dashboard.html
+++ b/Website/public/dashboard.html
@@ -337,7 +337,7 @@
                 },
                 title: {
                     display: true,
-                    text: 'Porcentagem de público',
+                    text: 'Distribuição por Gênero',
                     color: 'black',
                     font: {
                         size: 18
@@ -426,7 +426,7 @@
                 },
                 title: {
                     display: true,
-                    text: 'Participação dos usuários no quiz',
+                    text: 'Usuários que responderam ao menos um quiz',
                     color: 'black',
                     font: {
                         size: 18
@@ -500,7 +500,8 @@
                     text: 'Quantidade de cada nível de usuario',
                     font: {
                         size: 18
-                    }
+                    },
+                        color: 'black',
                 }
             },
             scales: {
@@ -610,10 +611,12 @@
                 },
                 title: {
                     display: true,
-                    text: 'Quantidade de realização de cada Quiz por usúario',
+                    text: 'Realização de cada Quiz por usúario',
                     font: {
-                        size: 18
-                    }
+                        size: 18,
+                        
+                    },
+                    color: 'black',
                 }
             },
             scales: {
