--- a/Website/public/quizDash.html
+++ b/Website/public/quizDash.html
@@ -296,7 +296,7 @@
                 },
                 title: {
                     display: true,
-                    text: 'Quantidade de realizações por quiz',
+                    text: 'Total de vezes que cada quiz foi respondido',
                     font: {
                         size: 18
                     }
@@ -371,7 +371,7 @@
                 },
                 title: {
                     display: true,
-                    text: 'Média de acerto por quiz',
+                    text: 'Pontuação média por quiz',
                     font: {
                         size: 18
                     }
@@ -446,7 +446,7 @@
                 },
                 title: {
                     display: true,
-                    text: 'Media de acerto por nível de usuário',
+                    text: 'Desempenho médio por nível de usuário',
                     font: {
                         size: 18
                     }
@@ -522,7 +522,7 @@
                 },
                 title: {
                     display: true,
-                    text: 'Realizações por Nível',
+                    text: 'Desempenho médio por nível de usuário',
                     font: {
                         size: 18
                     }
