--- a/Website/public/quizDash.html
+++ b/Website/public/quizDash.html
@@ -522,7 +522,7 @@
                 },
                 title: {
                     display: true,
-                    text: 'Desempenho médio por nível de usuário',
+                    text: 'Tentativas realizadas por nível de usuario',
                     font: {
                         size: 18
                     }
